# SGraph-AI__App__Send

./: .gitignore  .local-server.env.example  Dockerfile  README.md  pyproject.toml  requirements-test.txt
.claude/: CLAUDE.md
.claude/explorer/: CLAUDE.md
.claude/hooks/: session-start.sh
.claude/town-planner/: CLAUDE.md
.claude/villager/: CLAUDE.md
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml  ci-pipeline__prod.yml  ci-pipeline__release.yml  deploy-library.yml  deploy-ui-user.yml  deploy-ui-vault.yml  deploy-ui-workspace.yml  deploy-website.yml  docker-build.yml  jekyll-pages.yml
.issues/: README.md  issue.json
.issues/config/: link-types.json  node-types.json
.issues/website-redesign/: README.md
docs/_to_process/: project - Secure Send Service brief.md  secure-send-llm-retention-compliance-gtm.md  secure-send-roadmap.md
docs/architecture/: README.md
scripts/: admin__run-locally.sh  deploy_static_site.py  generate_i18n_pages.py  generate_library_index.py  generate_library_pages.py  generate_send_i18n_pages.py  generate_sitemap.py  generate_vault_i18n_pages.py  inject_build_version.py  library__run-locally.sh  store_ci_artifacts.py  user__run-locally.sh  vault__run-locally.sh  website__run-locally.sh
sgraph_ai__website/: .gitignore  404.html  README.md  index.html  robots.txt  sitemap.xml
sgraph_ai__website/agents/: index.html
sgraph_ai__website/architecture/: index.html
sgraph_ai__website/cloudfront/: url-rewrite.js
sgraph_ai__website/contact/: index.html
sgraph_ai__website/css/: style.css
sgraph_ai__website/early-access/: index.html
sgraph_ai__website/en-gb/: index.html
sgraph_ai__website/i18n/: de-ch.json  de-de.json  en-gb.json  en-us.json  en.json  es-ar.json  es-es.json  es-mx.json  fr-ca.json  fr-fr.json  hr-hr.json  it-it.json  nl-nl.json  pl-pl.json  pt-br.json  pt-pt.json  pt.json  ro-ro.json  tlh.json
sgraph_ai__website/images/: _page.json
sgraph_ai__website/js/: i18n.js
sgraph_ai__website/pricing/: index.html
sgraph_ai__website/product/: index.html
sgraph_ai_app_send/: __init__.py  version
sgraph_ai_app_send/_for_osbot_aws/: Lambda__Dependencies__Builder.py  Lambda__Dependencies__Loader.py  __init__.py
sgraph_ai_app_send/container/: app.py
sgraph_ai_app_send/lambda__admin/: admin__config.py
sgraph_ai_app_send/lambda__user/: note.txt  user__config.py
sgraph_ai_app_send/utils/: MCP__Setup.py  Vault__Crypto.py  Version.py
sgraph_ai_app_send__docker/: .dockerignore  Dockerfile  Fast_API__SGraph__Send__Container.py  app.py  docker-build.yml  provision_ec2.py
sgraph_ai_app_send__library/: 404.html  catalogue.csv  index.html  index.json
sgraph_ai_app_send__library/claude-guidance/: index.html
sgraph_ai_app_send__library/guides/: ifd-testing.md  ifd-versioning.md  index.html
sgraph_ai_app_send__library/roles/: architect.md  developer.md  grc.md  historian.md  index.html  librarian.md  qa.md  sherpa.md
sgraph_ai_app_send__ui__admin/: __init__.py  index.html
sgraph_ai_app_send__ui__user/: __init__.py  index.html
sgraph_ai_app_send__ui__vault/: __init__.py  index.html
sgraph_ai_app_send__ui__workspace/: __init__.py
team/comms/: QA_START_HERE.md  (+1 more)
(+2912 files in other folders)
