[tool.poetry]
name        = "sgraph_ai_app_send"
version     = "v0.22.10"
description = "SGraph-AI__App__Send"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/SGraph-AI__App__Send"
repository  = "https://github.com/the-cyber-boardroom/SGraph-AI__App__Send"

packages    = [ { include = "sgraph_ai_app_send"                 },
                { include = "sgraph_ai_app_send__docker"         },
                { include = "sgraph_ai_app_send__ui__admin"      },
                { include = "sgraph_ai_app_send__ui__user"       },
                { include = "sgraph_ai_app_send__ui__vault"      },
                { include = "sgraph_ai_app_send__ui__workspace"  }]

[tool.poetry.dependencies]
python                         = "^3.12"
osbot-utils                    = "*"
issues-fs-cli                  = "*"
osbot-fast-api-serverless      = "*"
mgraph-ai-service-cache        = "*"
mgraph-ai-service-cache-client = "*"
fastapi-mcp                    = "*"

[tool.poetry.scripts]
sg-send-ec2 = "sgraph_ai_app_send__docker.provision_ec2:app"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"